# coding: utf-8

from __future__ import annotations
from datetime import date, datetime  # noqa: F401

import re  # noqa: F401
from typing import Any, Dict, List, Optional  # noqa: F401

from pydantic import AnyUrl, BaseModel, EmailStr, Field, validator  # noqa: F401


class NewNodeList(BaseModel):
    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).

    Do not edit the class manually.

    NewNodeList - a model defined in OpenAPI

        name: The name of this NewNodeList [Optional].
        description: The description of this NewNodeList [Optional].
        node_ids: The node_ids of this NewNodeList [Optional].
    """

    name: Optional[str] = Field(alias="name", default=None)
    description: Optional[str] = Field(alias="description", default=None)
    node_ids: Optional[List[List]] = Field(alias="nodeIds", default=None)

NewNodeList.update_forward_refs()
