# coding: utf-8

from __future__ import annotations
from datetime import date, datetime  # noqa: F401

import re  # noqa: F401
from typing import Any, Dict, List, Optional  # noqa: F401

from pydantic import AnyUrl, BaseModel, EmailStr, Field, validator  # noqa: F401


class ParameterValueRange(BaseModel):
    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).

    Do not edit the class manually.

    ParameterValueRange - a model defined in OpenAPI

        group_id: The group_id of this ParameterValueRange [Optional].
        value_min_inclusiv: The value_min_inclusiv of this ParameterValueRange [Optional].
        value_max_exclusiv: The value_max_exclusiv of this ParameterValueRange [Optional].
    """

    group_id: Optional[str] = Field(alias="groupId", default=None)
    value_min_inclusiv: Optional[float] = Field(alias="valueMinInclusiv", default=None)
    value_max_exclusiv: Optional[float] = Field(alias="valueMaxExclusiv", default=None)

ParameterValueRange.update_forward_refs()
